--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -14,6 +14,11 @@
     	@content;
     }
   }
+  @if $media == small-landscape {
+    @media only screen and (max-width: $small-screen) and (orientation: landscape){
+      @content;
+    }
+  }
   @if $media == medium {
     @media only screen and (min-width: $small-screen + 1) and (max-width: $large-screen - 1) {
       @content;
